2004-05-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.cc (get_toolbar_style_index): Return -1 rather
	than 0 on failure.

2004-05-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/prefdialog.glade (button_textview_font): Replace custom font
	selection button with the new GtkFontButton.
	(button_match_color): Replace custom color selection button with
	the new GtkColorButton.
	(button_current_color): ditto.
	(combo_toolbar_style): Rename from option_toolbar_style.  Use the
	new GtkComboBox widget instead of GtkOptionMenu.

	* src/prefdialog.{cc,h} (FontSelectionButton): Remove.
	(ColorSelectionButton): Remove.
	(PrefDialog): Accomodate to changes in the glade file.
	(on_textview_font_set): Rename from on_textview_font_selected().
	(on_match_color_set): Rename from on_match_color_selected().
	(on_current_color_set): Rename from on_current_color_selected().

2004-05-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::load_xml): Make the folder button
	grab focus because otherwise the Preferences tool button will be
	focused after startup.  I blame libglade -- its whole tool button
	handling seems to be somewhat shaky.

2004-05-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (ALL_LINGUAS): Use `cat "$srcdir/po/LINGUAS"` to
	assign this variable, so that there is only one file to edit when
	adding a new language.

2004-05-17  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.ac: Added Portuguese (pt) to ALL_LINGUAS.

2004-05-17  Christian Rose  <menthos@menthos.com>

	* configure.ac: Added "sv" to ALL_LINGUAS.

2004-05-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (dist_noinst_SCRIPTS): Remove config.rpath because
	automake distributes this file automatically.  List intltool-*.in
	files in the separate variable dist_intltool.
	(dist_noinst_DATA): List all *.m4 files in the separate variable
	dist_macros.  Move $(dist_intltool) from dist_noinst_SCRIPTS here